worked on password and css so error under .help-block would be red

--- a/partials/signup-form.html
+++ b/partials/signup-form.html
@@ -20,10 +20,14 @@
 	<div class="form-group">
 		<label for="password">Password</label>
 		<input type="password" id="password" name="password" class="form-control" required ng-model="password">
+		<p class="help-block" id="enterPass1">Please enter your password.</p>		
+		<p class="help-block matchPass">Passwords don't match</p>
 	</div>
 	<div class="form-group">
 		<label for="confirm-password">Confirm Password</label>
 		<input type="password" id="confirm" name="confirm" class="form-control" required ng-model="confirm">
+		<p class="help-block" id="enterPass2">Please enter your password.</p>
+		<p class="help-block matchPass">Passwords don't match</p>
 	</div>
 	<div class="form-group">
 		<button type="reset" class="btn btn-default">Reset</button>
