fixed typo in css

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
 #vlastname {
     color: red;
 };
+
+/*set all error messages to be red*/
+.help-block{
+    color: red;
+    visibility: none;
+    
+}
