--- a/partials/signup-form.html
+++ b/partials/signup-form.html
@@ -21,14 +21,14 @@
 	<div class="form-group">
 		<label for="password">Password</label>
 		<input type="password" id="password" name="password" class="form-control" required ng-model="password">
-		<p class="helpBlock" id="enterPass1">Please enter your password.</p>		
-		<p class="helpBlock matchPass">Passwords don't match</p>
+		<p class="help-block errorBox" id="enterPass1">Please enter your password.</p>		
+		<p class="help-block matchPass errorBox">Passwords don't match</p>
 	</div>
 	<div class="form-group">
 		<label for="confirm-password">Confirm Password</label>
 		<input type="password" id="confirm" name="confirm" class="form-control" required ng-model="confirm">
-		<p class="helpBlock" id="enterPass2">Please enter your password.</p>
-		<p class="helpBlock matchPass">Passwords don't match</p>
+		<p class="help-block" id="enterPass2 errorBox">Please enter your password.</p>
+		<p class="help-block matchPass errorBox">Passwords don't match</p>
 	</div>
 	<div class="form-group">
 		<button type="reset" class="btn btn-default">Reset</button>
