css wasnt pushed prev

--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,8 @@
 };
 
 /*set all error messages to be red*/
-.helpBlock{
+.errorBox{
     color: red;
     display: none;
     
-}
-#enterPass1{
-    color: red;
-    display: none;
 }
