something strange is going on with css

--- a/partials/signup-form.html
+++ b/partials/signup-form.html
@@ -27,7 +27,7 @@
 	<div class="form-group">
 		<label for="confirm-password">Confirm Password</label>
 		<input type="password" id="confirm" name="confirm" class="form-control" required ng-model="confirm">
-		<p class="help-block" id="enterPass2 errorBox">Please enter your password.</p>
+		<p class="help-block errorBox" id="enterPass2">Please enter your password.</p>
 		<p class="help-block matchPass errorBox">Passwords don't match</p>
 	</div>
 	<div class="form-group">
