--- a/partials/signup-form.html
+++ b/partials/signup-form.html
@@ -1,9 +1,11 @@
-<form name="signupForm">
+<form name="signupForm" ng-controller="testingCtrl">
 	<div class="form-group">
 		<label for="email">Email</label>
-		<input type="email" id="email" name="email" class="form-control" required ng-model="email" placeholder="email address">
-		<p class="help-block" ng-if="signupForm.email.$touched">Required!</p>
-		<p class="error" ng-show="signupForm.input.$error.email">Not valid email!</p>
+		<input type="email" id="email" name="input" class="form-control" ng-model="email.text" placeholder="email address" required>
+		<div role="alert">
+			<span id="emptyEmail" class="error" ng-show="signupForm.input.$error.required && signupForm.input.$touched">Email is required!</span>
+			<span id="invalidEmail" class="error" ng-show="signupForm.input.$error.email">Not valid email!</span>
+		</div>
 	</div>
 	<div class="form-group">
 		<label for="firstname">First Name</label>
