--- a/partials/signup-form.html
+++ b/partials/signup-form.html
@@ -14,26 +14,30 @@
 	<div class="form-group">
 		<label for="lastname">Last Name</label>
 		<input type="text" id="lastname" name="lastname" class="form-control" required ng-model="lastname" placeholder="your last name">
-		<p class="help-block" id="vlastname" ng-show="signupForm.lastname.$invalid">We need to know your last name.</p>
+		<p class="help-block" id="vlastname" ng-show="signupForm.lastname.$invalid && signupForm.lastname.$touched">We need to know your last name.</p>
 	</div>
 	<div class="form-group">
 		<label for="birthdate">Date of Birth</label>
-		<input type="date" id="birthdate" name="birthdate" class="form-control" required ng-model="birthdate">
+		<input type="text" id="birthdate" name="birthdate" class="form-control" required ng-model="birthdate">
+		<p aria-live="polite" role="alert" ng-if="signupForm.birthdate.$error.validDate">You must enter date in a valid date format.</p>
+		<p aria-live="polite" role="alert" class="errorAge" ng-if="signupForm.birthdate.$error.validAge">You must be atleast 13 years old to join.</p>
 	</div>
 	<div class="form-group">
 		<label for="password">Password</label>
 		<input type="password" id="password" name="password" class="form-control" required ng-model="password">
-		<p class="help-block errorBox" id="enterPass1" ng-show="signupForm.password.$invalid">Please enter your password.</p>		
-		<p class="help-block matchPass errorBox" ng-show="signupForm.passwor.$invalid">Passwords don't match</p>
+		<p role="alert" class="help-block" ng-show="signupForm.password.$touched && signupForm.password.$invalid">Required!</p>	
 	</div>
 	<div class="form-group">
 		<label for="confirm-password">Confirm Password</label>
-		<input type="password" id="confirm" name="confirm" class="form-control" required ng-model="confirm">
-		<p class="help-block errorBox" id="enterPass2" ng-show="signupForm.confirm.$invalid">Please enter your password.</p>
-		<p class="help-block matchPass errorBox" ng-show="signupForm.confirm.$invalid">Passwords don't match</p>
+		<input type="password" id="confirmPass" name="confirmPass" class="form-control" required ng-model="confirmPass" ng-change="validateBday()">
+		<p class="help-block" role="alert" ng-if="password != confirmPass && signupForm.confirmPass.$touched">Passwords must match!</p>
+		<p class="help-block" role="alert" ng-show="signupForm.confirmPass.$invalid && signupForm.confirmPass.$touched">Required!</p>
 	</div>
 	<div class="form-group">
-		<button type="reset" class="btn btn-default">Reset</button>
-		<button type="submit" class="btn btn-primary">Submit</button>
+		<button role="button" aria-label="Reset" type="reset" class="btn btn-default">Reset</button>
+		<button type="submit" aria-label="Submit" class="btn btn-primary" ng-disabled="signupForm.$invalid" ng-click="submitForm()">Submit</button>
+		<p role="alert" aria-live="polite" ng-if="signupForm.$valid && submit==true" id="alert">Successfully Submitted Form</p>
 	</div>
 </form>
+<!-- <p aria-live="polite" role="alert" class="errorValid" ng-if="signupForm.birthdate.$error.validDate">You must enter date in a valid date format</p>
+<p aria-live="polite" role="alert" class="errorAge" ng-if="signupForm.birthdate.$error.validAge">You must be 13 years old to join</p> -->
