--- a/partials/signup-form.html
+++ b/partials/signup-form.html
@@ -21,8 +21,8 @@
 	</div>
 
 	<div class="form-group">
-		<label for="birthdate">Date of Birth</label>
-		<input type="text" id="birthdate" name="birthdate" class="form-control" required ng-model="birthdate">
+		<label for="birthdate">Birthdate</label>
+		<input type="text" id="birthdate" name="birthdate" class="form-control error" required ng-model="birthdate" placeholder="your birthdate">
 		<p aria-live="polite" role="alert" id="errorDateValid" ng-if="signupForm.birthdate.$error.validDate">You must enter date in a valid date format.</p>
 		<p aria-live="polite" role="alert" id="errorAge" ng-if="signupForm.birthdate.$error.validAge">You must be atleast 13 years old to join.</p>
 	</div>
@@ -30,14 +30,14 @@
 	<div class="form-group">
 		<label for="password">Password</label>
 		<input type="password" id="password" name="password" class="form-control" required ng-model="password">
-		<p id="passwordAlert" role="alert" class="help-block" ng-show="signupForm.password.$touched && signupForm.password.$invalid">Required!</p>	
+		<p id="passwordAlert" role="alert" class="error" ng-show="signupForm.password.$touched && signupForm.password.$invalid">Required!</p>	
 	</div>
 
 	<div class="form-group">
 		<label for="confirm-password">Confirm Password</label>
 		<input type="password" id="confirmPass" name="confirmPass" class="form-control" required ng-model="confirmPass" ng-change="validateBday()">
-		<p id="matchPass" class="help-block" role="alert" ng-show="password != confirmPass && signupForm.confirmPass.$touched">Passwords must match!</p>
-		<p id="confirmAlert" class="help-block" role="alert" ng-show="signupForm.confirmPass.$invalid && signupForm.confirmPass.$touched">Required!</p>
+		<p id="matchPass" class="error" role="alert" ng-show="password != confirmPass && signupForm.confirmPass.$touched">Passwords don't' match!</p>
+		<p id="confirmAlert" class="error" role="alert" ng-show="signupForm.confirmPass.$invalid && signupForm.confirmPass.$touched">Required!</p>
 	</div>
 
 	<div class="form-group">
