--- a/partials/signup-form.html
+++ b/partials/signup-form.html
@@ -12,7 +12,7 @@
 	<div class="form-group">
 		<label for="firstname">First Name</label>
 		<input type="text" id="firstname" name="firstname" class="form-control" ng-model="firstname" placeholder="your first name">		
-		<p class="help-block error" id="vfirstname" ng-show="signupForm.firstname.$touched">We need to know your first name.</p>
+		<p class="help-block error" id="vfirstname" ng-show="signupForm.firstname.$invalid &&  signupForm.firstname.$touched">We need to know your first name.</p>
 	</div>
 
 	<div class="form-group">
@@ -23,7 +23,7 @@
 
 	<div class="form-group">
 		<label for="birthdate">Birthdate</label>
-		<input type="text" id="birthdate" name="birthdate" class="form-control" required ng-model="birthdate" placeholder="your birthdate">
+		<input type="text" id="birthdate" name="birthdate" class="form-control" required ng-model="birthdate" placeholder="your birthdate">		<p id="birthdateAlert" role="alert" class="error" ng-show="signupForm.birthdate.$touched && signupForm.birthdate.$invalid">Required!</p>	
 		<p aria-live="polite" role="alert" id="errorDateValid" ng-if="signupForm.birthdate.$error.validDate" class="error">You must enter date in a valid date format.</p>
 		<p aria-live="polite" role="alert" id="errorAge" ng-if="signupForm.birthdate.$error.validAge" class="error">You must be atleast 13 years old to join.</p>
 	</div>
