--- a/partials/signup-form.html
+++ b/partials/signup-form.html
@@ -1,5 +1,6 @@
 <form name="signupForm" ng-controller="testingCtrl">
 	<div class="alert-success" role="alert" aria-live="polite" ng-show="signupForm.$valid && showAlert==true" id="alert">Successfully Submitted Form</div>
+
 	<div class="form-group">
 		<label for="email">Email</label>
 		<input type="email" id="email" name="input" class="form-control" ng-model="email.text" placeholder="email address" required>
@@ -24,8 +25,8 @@
 	<div class="form-group">
 		<label for="birthdate">Birthdate</label>
 		<input type="text" id="birthdate" name="birthdate" class="form-control" required ng-model="birthdate" placeholder="your birthdate">		<p id="birthdateAlert" role="alert" class="error" ng-show="signupForm.birthdate.$touched && signupForm.birthdate.$invalid">Required!</p>	
-		<p aria-live="polite" role="alert" id="errorDateValid" ng-if="signupForm.birthdate.$error.validDate" class="error">You must enter date in a valid date format.</p>
-		<p aria-live="polite" role="alert" id="errorAge" ng-if="signupForm.birthdate.$error.validAge" class="error">You must be atleast 13 years old to join.</p>
+		<p aria-live="polite" role="alert" id="errorDateValid" ng-if="signupForm.birthdate.$error.validDate" class="error" ng-change="validateBday()">You must enter date in a valid date format.</p>
+		<p aria-live="polite" role="alert" id="errorAge" ng-if="signupForm.birthdate.$error.validAge" class="error" ng-change="validateBday()">You must be atleast 13 years old to join.</p>
 	</div>
 
 	<div class="form-group">
@@ -36,7 +37,7 @@
 
 	<div class="form-group">
 		<label for="confirm-password">Confirm Password</label>
-		<input type="password" id="confirmPass" name="confirmPass" class="form-control" required ng-model="confirmPass" ng-change="validateBday()">
+		<input type="password" id="confirmPass" name="confirmPass" class="form-control" required ng-model="confirmPass">
 		<p id="matchPass" class="error" role="alert" ng-show="password != confirmPass && signupForm.confirmPass.$touched">Passwords don't match!</p>
 		<p id="confirmAlert" class="error" role="alert" ng-show="signupForm.confirmPass.$invalid && signupForm.confirmPass.$touched">Required!</p>
 	</div>
