--- a/partials/signup-form.html
+++ b/partials/signup-form.html
@@ -25,7 +25,7 @@
 	<div class="form-group">
 		<label for="birthdate">Birthdate</label>
 		<input type="text" id="birthdate" name="birthdate" class="form-control" required ng-model="birthdate" placeholder="your birthdate" ng-change="validateBday()">		
-		<p id="birthdateAlert" role="alert" class="error" ng-show="signupForm.birthdate.$touched && signupForm.birthdate.$invalid">Required!</p>	
+		<p id="birthdateAlert" role="alert" class="error" ng-show="signupForm.birthdate.$touched && signupForm.birthdate.$invalid && !signupForm.birthdate.$error.validDate && !signupForm.birthdate.$error.validAge">Required!</p>	
 		<p aria-live="polite" role="alert" id="errorDateValid" ng-if="signupForm.birthdate.$error.validDate" class="error" ">You must enter date in a valid date format.</p>
 		<p aria-live="polite" role="alert" id="errorAge" ng-if="signupForm.birthdate.$error.validAge" class="error">You must be atleast 13 years old to join.</p>
 	</div>
@@ -40,7 +40,7 @@
 		<label for="confirm-password">Confirm Password</label>
 		<input type="password" id="confirmPass" name="confirmPass" class="form-control" required ng-model="confirmPass">
 		<p id="matchPass" class="error" role="alert" ng-show="password != confirmPass && signupForm.confirmPass.$touched">Passwords don't match!</p>
-		<p id="confirmAlert" class="error" role="alert" ng-show="signupForm.confirmPass.$invalid && signupForm.confirmPass.$touched">Required!</p>
+		<p id="confirmAlert" class="error" role="alert" ng-show="signupForm.confirmPass.$invalid && signupForm.confirmPass.$touched && password == confirmPass">Required!</p>
 	</div>
 
 	<div class="form-group">
